--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@
   expirationDate="02/33"
   paymentSystem="visa"
 ></app-card>
+
+<p appAttribute [attribute]='value'  > Try to do something original...</p>
+
