--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,5 @@
   expirationDate="02/33"
   paymentSystem="visa"
 ></app-card>
+<p>{{ 24637423.123 | number:'ru-RU' }}</p> <!-- Результат: '24 637 423,123' -->
+<p>{{ 24637423.123 | number:'en-US' }}</p> <!-- Результат: '24,637,423.123' -->
